--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,94 @@ header .fa-bars {
   display: none;
 }
 
+.home {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+  padding: 2rem 10rem;
+}
+
+.home .video video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.home .content {
+  margin-top: 7rem;
+}
+
+.home .content h1 {
+  font-size: 6.1vw;
+  color: #fff;
+  text-shadow: 0 0.3rem 0.5rem #000;
+}
+
+.home .content p {
+  font-size: 1.5rem;
+  color: #eee;
+  text-shadow: 0 0.3rem 0.5rem #000;
+  padding-left: 2rem;
+  padding-left: 0.3rem solid #ddd;
+}
+
+.home .form-container form {
+  margin-top: 8rem;
+  padding: 2rem;
+  width: 40rem;
+  background-color: #fff;
+  box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.9);
+  border-radius: 0.5rem;
+}
+
+.home .form-container form h3 {
+  color: #333;
+  font-size: 3rem;
+  text-align: center;
+}
+
+.home .form-container form span {
+  color: #0098a1;
+  font-size: 2.5rem;
+  margin: 0.5rem 0;
+  display: block;
+}
+
+.home .form-container form input {
+  width: 100%;
+  padding: 0 1rem;
+  height: 4rem;
+  font-size: 1.5rem;
+  background: #eee;
+  border: none;
+  outline: none;
+  color: #333;
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3) inset;
+  border-radius: 0.5rem;
+}
+
+.home .form-container form input[type="submit"] {
+  width: 10rem;
+  color: #fff;
+  background: #0098a1;
+  cursor: pointer;
+  font-size: 2rem;
+  margin-top: 2rem;
+  transition: 0.2s linear;
+}
+
+.home .form-container form input[type="submit"]:hover {
+  border: 0.2rem solid #0098a1;
+  color: #0098a1;
+  background: none;
+}
+
 
 @media (max-width: 768px) {
   html {
@@ -112,5 +200,8 @@ header .fa-bars {
     font-size: 3rem;
   }
 
-  
+  header .nav-toggle {
+    top: 5.5rem;
+    opacity: 1;
+  }
 }
