--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,37 @@ header .fa-bars {
   background: none;
 }
 
+@media (max-width: 991px) {
+  .home {
+    flex-flow: column;
+    padding: 1.5rem;
+  }
+  .home .content h1 {
+    text-align: center;
+  }
+  .home .content p{
+    font-size: 1.8rem;
+    padding: 0;
+    border: none;
+
+  }
+}
+
+@media (max-width: 500px) {
+  .home .form-container {
+    width: 100%;
+
+  }
+  .home .form-container form {
+    width:100%;
+    margin: 3rem 0;
+  }
+
+  .home .form-container form input[type="submit"] {
+    width: 100%;
+  }
+
+}
 
 @media (max-width: 768px) {
   html {
