--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,19 @@ html {
   font-size: 62.5%;
 }
 
+.heading {
+  color: #333;
+  font-size: 3.5rem;
+  padding: 1rem;
+  padding-top: 6rem;
+  text-align: center;
+  letter-spacing: 0.2rem;
+}
+
+.heading span {
+  color: #0098a1;
+}
+
 header {
   width: 96%;
   background: #fff;
@@ -164,12 +177,137 @@ header .fa-bars {
   background: none;
 }
 
+.feature {
+  min-height: 100vh;
+  background: #f9f9f9;
+}
 
+.feature .card-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: wrap;
+  width: 100%;
+}
 
+.feature .card-container .card {
+  width: 30rem;
+  margin: 2rem;
+  background: #fff;
+  border-radius: 0.5rem;
+  box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  position: relative;
+}
 
+.feature .card-container .card .discount {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  display: block;
+  height: 3.5rem;
+  width: 6rem;
+  background: #ff3300;
+  color: #fff;
+  line-height: 4rem;
+  text-align: center;
+  font-size: 2rem;
+}
 
+.feature .card-container .card img {
+  height: 25rem;
+  width: 100%;
+  object-fit: cover;
+}
 
+.feature .card-container .card .content {
+  padding-bottom: 2rem;
+  text-align: center;
+}
 
+.feature .card-container .card .content .title {
+  color: #0098a1;
+  font-size: 3rem;
+}
+.feature .card-container .card .content p {
+  color: #333;
+  font-size: 1.3rem;
+  padding: 1rem;
+}
+
+.feature .card-container .card .content .stars i {
+  padding: 0 0.2rem;
+  font-size: 2rem;
+  color: gold;
+}
+
+.feature .card-container .card .content .btn {
+  font-size: 1.7rem;
+  margin-top: 1.4rem;
+  height: 3.5rem;
+  width: 12rem;
+  border-radius: 0.5rem;
+  outline: none;
+  border: none;
+  background: #0098a1;
+  color: #fff;
+  cursor: pointer;
+  transition: 0.2s linear;
+}
+
+.feature .card-container .card .content .btn:hover {
+  background: none;
+  border: 0.2rem solid #0098a1;
+  color: #0098a1;
+}
+
+.about {
+  min-height: 100vh;
+}
+
+.about .row {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.about .row .image img {
+  height: 65vh;
+  width: 50vw;
+}
+
+.about .row .content h3 {
+  font-size: 4rem;
+  color: #0098a1;
+}
+
+.about .row .content p {
+  font-size: 1.9rem;
+  color: #0098a1;
+}
+
+.about .row .content .btn {
+  outline: none;
+  border: none;
+  cursor: pointer;
+  transition: 2s linear;
+  height: 4rem;
+  width: 18rem;
+  margin-top: 1rem;
+  color: #fff;
+  background: #0098a1;
+  font-size: 2rem;
+}
+
+.about .row .content .btn1,
+.about .row .content .btn:hover {
+  background: none;
+  color: #0098a1;
+  border: 0.2rem solid #0098a1;
+  margin-right: 1rem;
+}
 
 @media (max-width: 991px) {
   .home {
@@ -179,28 +317,38 @@ header .fa-bars {
   .home .content h1 {
     text-align: center;
   }
-  .home .content p{
+  .home .content p {
     font-size: 1.8rem;
     padding: 0;
     border: none;
-
   }
+  .about .row {
+    flex-flow: column;
+  }
+  .about .row .image img{
+    width: 90vw;
+  }
+  .about .row .content {
+    text-align: center;
+  }
+  .about .row .content .btn1{
+    margin-right: 0;
+  }
+
 }
 
 @media (max-width: 500px) {
   .home .form-container {
     width: 100%;
-
   }
   .home .form-container form {
-    width:100%;
+    width: 100%;
     margin: 3rem 0;
   }
 
   .home .form-container form input[type="submit"] {
     width: 100%;
   }
-
 }
 
 @media (max-width: 768px) {
