--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,62 @@ header .fa-bars {
   margin-right: 1rem;
 }
 
+
+.gallery{
+min-height: 100vh;
+}
+
+
+.gallery .box-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 90%;
+  margin: 0 auto;
+
+}
+
+.gallery .box-container .box{
+  height: 20rem;
+  width: 30rem;
+  margin: 2rem;
+  cursor: pointer;
+  overflow: hidden;
+  position: relative;
+}
+
+.gallery .box-container .box img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.gallery .box-container .box .icons{
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(transparent, #333);
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+  height: 100%;
+  width: 100%;
+}
+
+.gallery .box-container .box .icons a {
+  color: #fff;
+  text-shadow: 0 .1rem .3rem #000;
+  font-size: 3rem;
+  padding-bottom: 2rem;
+}
+
+.gallery .box-container .box .icons a:hover{
+  color: #0098a1;
+}
+
+
+
 @media (max-width: 991px) {
   .home {
     flex-flow: column;
