--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ min-height: 100vh;
 
 .gallery .box-container .box .icons{
   position: absolute;
-  top: 0;
+  top: 120%;
   left: 0;
   background: linear-gradient(transparent, #333);
   display: flex;
@@ -350,6 +350,13 @@ min-height: 100vh;
   justify-content: space-around;
   height: 100%;
   width: 100%;
+  opacity: 0;
+  transition: .2s linear;
+}
+
+.gallery .box-container .box:hover .icons a{
+  opacity: 1;
+  top: 0;
 }
 
 .gallery .box-container .box .icons a {
